@@ -1,11 +1,11 @@
 # $Id$
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: {jumi stored_code_source}code_written{/jumi}</b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or ID of Jumi componet databese table record.<br />The filepathname is to the Jumi Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: {jumi plugin/content/jumi/jumi_demo.php}{/jumi}</p><p>Example 2: {jumi *1}{/jumi}</p><p>Example 3: {jumi *1}&lt;?php echo 'Hello O\'Harra!'; &gt;{/jumi}</p><p>Example 4: {jumi}&lt;?php echo 'Hello O\'Harra!'; ?&gt;{/jumi}</p><p>There is also a compatible Jumi module and a component.</p><p><b>Additional information and resources</b>:</p><ul><li><a href="http://jumi.vedeme.cz">Downloads & guides</a></li><li><a href="http://edo.webmaster.am/jumi">Tips & tricks</a></li></ul>
-PARAMABSPATH=Optional Default Absolute Path to the included file. It is prepend to filepathname to be included. If left blank then it is identical to Joomla! root directory. No slash at the end.
-PARAMCLEARJUMI=If set to Yes all Jumi codes {jumi}{/jumi} are cleared from all articles and are not processed.
-PARAMNESTED=If set to Yes then Jumi interprets {jumi}{/jumi} found in stored_code_source too.
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: {jumi stored_code_source}code_written{/jumi}</b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or ID of Jumi componet database table record.<br />The filepathname is to the Jumi Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: {jumi plugin/content/jumi/jumi_demo.php}{/jumi}</p><p>Example 2: {jumi *1}{/jumi}</p><p>Example 3: {jumi *1}&lt;?php echo 'Hello O\'Harra!'; &gt;{/jumi}</p><p>Example 4: {jumi}&lt;?php echo 'Hello O\'Harra!'; ?&gt;{/jumi}</p><p><b>Additional information and resources</b>:</p><p>There is also a compatible Jumi module and a component.</p><ul><li><a href="http://jumi.vedeme.cz">Downloads & guides</a></li><li><a href="http://edo.webmaster.am/jumi">Tips & tricks</a></li></ul>
+PARAMABSPATH=Optional Default Absolute Jumi Path to the included file. It is prepend to filepathname to be included. If left blank then it is identical to Joomla! root directory. No slash at the end.
+PARAMCLEARJUMI=Defines in what articles will be Jumi statements cleared in the frontend. Secirity precaution. Filter is set in Content => Article Manager => Parameters => Filtering options.
+PARAMNESTED=If set to Yes then Jumi processes {jumi}{/jumi} found in stored_code_source too.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. If error occures nor Jumi code nor Jumi output will be seen in the frontend.
 ERROR_CONTENT=Jumi is working but there is <b>nothing to be shown</b>.<br />Specify the source of the code (first square brackets).
 ERROR_FILE=The file <b>%s</b> does not exist or is not readable!
 ERROR_RECORD=Record ID:<b>%d</b> does not exist!
