@@ -1,11 +1,11 @@
 # $Id$
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: {jumi stored_code_source}code_written{/jumi}</b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or ID of Jumi componet databese table record.<br />The filepathname is to the Jumi Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: {jumi plugin/content/jumi/jumi_demo.php}{/jumi}</p><p>Example 2: {jumi *1}{/jumi}</p><p>Example 3: {jumi *1}&lt;?php echo 'Hello O\'Harra!'; &gt;{/jumi}</p><p>Example 4: {jumi}&lt;?php echo 'Hello O\'Harra!'; ?&gt;{/jumi}</p><p>There is also a compatible Jumi module and a component.</p><p><b>Additional information and resources</b>:</p><ul><li><a href="http://jumi.vedeme.cz">Downloads & guides</a></li><li><a href="http://edo.webmaster.am/jumi">Tips & tricks</a></li></ul>
-PARAMABSPATH=Ոչ անհրաժեշտ Jumi-ի համր բացարձակ արահետը ֆայլը ներբեռնելու համար: Այն ավելացվում է ներբեռնվող ֆայլի արահետի սկզբում: Եթե նշված չէ, ապա համարժեք է Joomla!-ի արմատային պահոցին: Օգտագործեք առանց վերջում թեք նշանի:
-PARAMCLEARJUMI=Եթե ընտրված է Այո, ապա Jumi սցենարը չի ցուցադրվում և չի կատարվում:
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: {jumi stored_code_source}code_written{/jumi}</b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or ID of Jumi componet database table record.<br />The filepathname is to the Jumi Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: {jumi plugin/content/jumi/jumi_demo.php}{/jumi}</p><p>Example 2: {jumi *1}{/jumi}</p><p>Example 3: {jumi *1}&lt;?php echo 'Hello O\'Harra!'; &gt;{/jumi}</p><p>Example 4: {jumi}&lt;?php echo 'Hello O\'Harra!'; ?&gt;{/jumi}</p><p><b>Additional information and resources</b>:</p><p>There is also a compatible Jumi module and a component.</p><ul><li><a href="http://jumi.vedeme.cz">Downloads & guides</a></li><li><a href="http://edo.webmaster.am/jumi">Tips & tricks</a></li></ul>
+PARAMABSPATH=Optional Default Absolute Jumi Path to the included file. It is prepend to filepathname to be included. If left blank then it is identical to Joomla! root directory. No slash at the end.
+PARAMCLEARJUMI=Defines in what articles will be Jumi statements cleared in the frontend. Secirity precaution. Filter is set in Content => Article Manager => Parameters => Filtering options.
 PARAMNESTED=Եթե ընտրված է Այո, ապա Jumi-ն սցենարը ներբեռնելուց բացի կկատարի նաև ներբեռնված սցենարում ընդգրկված Jumi հրամանները:
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. If error occures nor Jumi code nor Jumi output will be seen in the frontend.
 ERROR_CONTENT=Jumi-ն աշխատում է, բայց <b>չկա ոչինչ ցուցադրելու համար</b>:<br />Նշեք սցենարի ակունքը առաջին քառակուսի փակագծերում:
 ERROR_FILE=<b>%s</b> ֆայլը գոյություն չունի կամ չի կարող կարդացվել!
 ERROR_RECORD=Գրառում ID:<b>%d</b>-ը գոյություն չունի!
